tests/samples/positive/inference/return_inference_null_pointer.ax
module return_inference_null_pointer;

fn as_const_ptr(value: &i32) -> *const i32 {
    return unsafe { ptrat<*const i32>(ptraddr(value)) };
}

fn null_first(flag: bool, value: &i32) {
    if flag {
        return null;
    }
    return as_const_ptr(value);
}

fn null_last(flag: bool, value: &i32) {
    if flag {
        return as_const_ptr(value);
    }
    return null;
}

fn main() -> i32 {
    let value: i32 = 7;
    let first = null_first(false, &value);
    let second = null_last(true, &value);
    if first == null {
        return 1;
    }
    if second == null {
        return 2;
    }
    return 0;
}
